# libdwbc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dwbc-config.cmake  install_prereq.sh  output.txt
CMake/: FindQPOASES.cmake
example/: CMakeLists.txt  README.md  main.cpp  test.cpp
include/: contact_constraint.h  contact_constraint.hpp  dhqp_contact_constraint.hpp  dhqp_link.hpp  dhqp_math.hpp  dhqp_task.hpp  dwbc.h  dwbc_contact_constraint.h  dwbc_hqp.h  dwbc_link.h  dwbc_math.h  dwbc_qp_wrapper.h  dwbc_task.h  dwbc_util.h  dwbc_wbd.h  dyros_hqp.hpp  link.h  link.hpp  math.h  math.hpp  qp_wrapper.h  qp_wrapper.hpp  qps_wrap.h  rl_wbc_bridge.h  robotdata.hpp  task.h  task.hpp  util.h  wbd.h  wholebody_dynamics.hpp
src/: HQP.hpp  contact_constraint.cpp  dwbc.cpp  dwbc_hqp.cpp  dyros_hqp_lib.cpp  link.cpp  math.cpp  qp_wrapper.cpp  qps_wrap.cpp  qps_wrap.cppss  rl_wbc_bridge.cpp  task.cpp  wbd.cpp
src/pybind/: rl_wbc_bridge.cpp
test/: CMakeLists.txt  README.md  test.cpp  test_thread.cpp
test/Matrix/: A0mat  A1mat  Acontact_mat  J_C  J_C_INV_T  Lambda_contact  N_C  NwJw  V2  W  W_inv  g0mat  gcontact_mat  hcontact_mat  lbAcontact_mat  torque_contact_  torque_grav_  torque_task_  ubA0mat  ubA1mat  ubAcontact_mat
tests/: CMakeLists.txt  dwbc_test.cpp  dwbc_test_util.h  dyros_tocabi_fixed_hand.urdf  dyros_tocabi_fixed_head.urdf  dyros_tocabi_fixed_head2.urdf  dyros_tocabi_no_right_arm.urdf  dyros_tocabi_no_waist.urdf  dyros_tocabi_ub.urdf  dyros_tocabi_ub2.urdf  dyros_tocabi_upper_body.urdf  dyros_tocabi_wo_head.urdf  pyrbdltest.py  test.cpp  test2.cpp  test_thread.cpp
tests/cases/1/: A0mat  A_inv_  J_C_INV_T  Lambda_contact  N_C  NwJw  W  W_inv  g1mat  h0mat  hcontact_mat  torque_contact_  torque_grav_  torque_task_  ubA0mat  ubA1mat
tests/cases/2/: A0mat  A1mat  A_inv_  Acontact_mat  J_C  J_C_INV_T  Lambda_contact  N_C  NwJw  W  W_inv  gcontact_mat  h1mat  hcontact_mat  torque_contact_  torque_grav_  torque_task_  ubA0mat  ubA1mat  ubAcontact_mat
tests/dof_test/: dyros_tocabi_dof18.urdf  dyros_tocabi_dof19.urdf  dyros_tocabi_dof20.urdf  dyros_tocabi_dof21.urdf  dyros_tocabi_dof22.urdf  dyros_tocabi_dof23.urdf  dyros_tocabi_dof24.urdf  dyros_tocabi_dof25.urdf  dyros_tocabi_dof26.urdf  dyros_tocabi_dof27.urdf  dyros_tocabi_dof28.urdf  dyros_tocabi_dof29.urdf  dyros_tocabi_dof30.urdf  dyros_tocabi_dof31.urdf  dyros_tocabi_dof32.urdf  dyros_tocabi_dof33.urdf  dyros_tocabi_dof34.urdf  dyros_tocabi_dof35.urdf  dyros_tocabi_dof36.urdf  dyros_tocabi_dof37.urdf  dyros_tocabi_dof38.urdf  dyros_tocabi_dof39.urdf  dyros_tocabi_dof40.urdf  dyros_tocabi_dof41.urdf  dyros_tocabi_dof42.urdf  dyros_tocabi_dof43.urdf  dyros_tocabi_dof44.urdf  dyros_tocabi_dof45.urdf
tests/sp_test/: 01_mod_control_test.cpp  02_model_mod_test.cpp  03_cmm_calc_test.cpp  04_inversion_test.cpp  05_lambda_calc_test.cpp  06_final_test.cpp  CMakeLists.txt  data_confirmation.cpp  dof_comparison.cpp  dof_comparison_jacc.cpp  herzog_test.cpp  jacc_compare.cpp  jacc_compare_bak.cpp  output.txt  redu_dyn_test.cpp  regulation_test.cpp  rot_test.cpp  test_case_writer.cpp  test_mod.cpp  test_mod2.cpp
